@@ -1244,6 +1244,10 @@ code {
 
 <p><strong>npc.direction</strong> | <code>direction</code> | Direction that NPC will initially face.</p>
 
+<p><strong>npc.waypoints</strong> | <code>list(point)</code> | NPC waypoints; negates wander_radius</p>
+
+<p><strong>npc.wander_radius</strong> | <code>int</code> | The radius (in tiles) that an NPC will wander around randomly; negates waypoints</p>
+
 <hr />
 
 <h4>MapParallax</h4>
